# gardenbook-server

./: README.md  app.js  database.js  package-lock.json  package.json
.cursor/rules/: gardenbook-server.mdc  general.mdc
gardenbook-api/: README.md  package-lock.json  package.json
gardenbook-api/src/: app.js  index.js
gardenbook-api/src/models/: plant.js
gardenbook-api/src/routes/: plants.js
gardenbook-api/tests/: app.test.js  db.test.js  plant.model.test.js  plants.test.js
gardenbook-api/tests/mocks/: mongodb.js
gardenbook_chat/: README.md  __init__.py  gardenbook_chat.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
gardenbook_chat/tests/: README.md  test_agent_behavior.py  test_gardenbook_chat.py
gardenbook_chat_api/: .coverage  README.md  __init__.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
gardenbook_chat_api/tests/: README.md  __init__.py  conftest.py  test_api.py  test_models.py  test_run.py
plants-mcp/: .coverage  claude_desktop_config_dummy.json  garden_mcp.py  pyproject.toml  run_tests.sh
plants-mcp/garden_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plants-mcp/price_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
plants-mcp/tests/: test_garden_mcp.py
